--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main class="grid-container">
-        <div class="card">
+        <!-- <div class="card">
             <img class="avatar" src="images/member-1.jpg" />
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
@@ -122,7 +122,7 @@
                 <p class="email">dtucker@yakitri.edu</p>
                 <p class="address">Chicago</p>
             </div>
-        </div>
+        </div> -->
         
     </main>
 
@@ -144,3 +144,4 @@
             </div>
         </div>
     </div>
+    <script src="js/app.js"></script>
