--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>Awesome Startup Employee Directory</h1>
+        <input type="text" id="search" placeholder="Search...">
     </header>
 
     <main class="grid-container">
