--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>Awesome Startup Employee Directory</h1>
-        <input type="text" id="search" placeholder="Search...">
+        <input type="text" id="search" placeholder="Filter by name">
     </header>
 
     <main class="grid-container">
@@ -128,6 +128,7 @@
     </main>
 
     <div class="overlay hidden">
+        <img src="images/arrows/keyboard_arrow_left-24px.svg" class="arrow left" alt="navLeft">
         <div class="modal">
             <button class="modal-close">X</button>
             <div class="modal-content">
@@ -144,5 +145,6 @@
                 </div>
             </div>
         </div>
+        <img src="images/arrows/keyboard_arrow_right-24px.svg" class = "arrow right" alt="navRight">
     </div>
     <script src="js/app.js"></script>
