--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main class="grid-container">
-        <div class="card">
+        <!-- <div class="card"> 
             <img class="avatar" src="images/member-1.jpg" />
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
@@ -123,7 +123,7 @@
                 <p class="email">dtucker@yakitri.edu</p>
                 <p class="address">Chicago</p>
             </div>
-        </div>
+        </div>  -->
         
     </main>
 
